--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,6 @@
     <string name="pref_favorite_social">Favorite social network</string>
     <string name="pref_default_favorite_social">https://facebook.com</string>
     <string name="set_reminder">Set Reminder</string>
-    <string name="channel_name">channel1</string>
-    <string name="channel_description">My NoteKeeper Notification1</string>
+    <string name="channel_name">Reminder for Notes</string>
+    <string name="channel_description">Reminder from NoteActivity</string>
 </resources>
