--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="set_reminder">Set Reminder</string>
     <string name="channel_name">channel1</string>
     <string name="channel_description">My NoteKeeper Notification1</string>
+    <string name="action_backup_notes">Backup notes</string>
 </resources>
